// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cmd-cli profiles create banana should create profiles and only list the type requested 1`] = `
"- 
  name:     test_banana (default) 
  contents: 
    color: green
"
`;

exports[`cmd-cli profiles create banana should create profiles and only list the type requested 2`] = `
"- 
  name:     test_banana (default) 
  contents: 
    amount: 1000
- 
  name:     test_strawberry
  contents: 
    amount: 1000
"
`;

exports[`cmd-cli profiles create banana should create profiles and only list the type requested 3`] = `
"- 
  name:     test_kiwi (default) 
  contents: 
    amount: 1000
    price:  1
"
`;
